# FinanceMonitor

./: .gitignore  Makefile  README.md  WORKLOG.md  alphavantage.py  dim_date.jsonl  env.example  iol.py  local_test_runner.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  workflow.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: sync-worklog.yml
bq_dataset/: populate_date.py
bq_dataset/schemas/: 1_dim_asset.sql  3_transactions.sql
bq_load/: main.py  requirements.txt
bq_writer_cloud_function/: main.py
cloud_run_job/: alphavantage.py  bq.py  iol.py  local_test_runner.py  main.py
data_pipelines/stocks/orchestrator/: stocks_dag.py
data_pipelines/stocks/services/alphavantage_extractor/: Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
data_pipelines/stocks/services/alphavantage_extractor/src/alphavantage_extractor/: main.py
data_pipelines/stocks/services/alphavantage_extractor/tests/: conftest.py  test_main.py
data_pipelines/stocks/services/alphavantage_loader/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
data_pipelines/stocks/services/alphavantage_loader/src/alphavantage_loader/: main.py
endpoints/stocks/: alphavantage.py
lecaps-scraper/: Dockerfile  gcp-alerting.tf  main.py  requirements.txt
lecaps-scraper-job/: Dockerfile  README.md  gcp-alerting.tf  main.py  pyproject.toml  requirements.txt
lecaps-scraper-job/etl/: extractor.py  loader.py
migrate/bq_dataset/: create_schemas.sh  dim_date.csv  load_dim_date.sh
migrate/bq_dataset/schemas/: 2_dim_date.sql  4_fact_investment_snapshot.sql
migrate/bq_writer_cloud_function/: requirements.txt
migrate/cloud_run_job/: Dockerfile  bq.py  local_test_runner.py  requirements.txt
migrate/lecaps-scraper-job/: Dockerfile  README.md
migrate/lecaps-scraper-job/etl/: transformer.py
migrate/workflow/: workflow.yml
scripts/: generate_dates.py
terraform/gcp_project/: bigquery.tf  main.tf  outputs.tf  storage.tf  variables.tf
terraform/services/: main.tf  variables.tf
terraform/services/modules/cloud_run_job/: main.tf  variables.tf
value_getters/: .dockerignore  Dockerfile
workflow/: workflow.yml
